--- a/packages/aws-cdk-lib/package.json
+++ b/packages/aws-cdk-lib/package.json
@@ -147,6 +147,7 @@
     "@aws-sdk/client-acm": "^3.421.0",
     "@aws-sdk/client-account": "^3.421.0",
     "@aws-sdk/client-cloudcontrol": "^3.421.0",
+    "@aws-sdk/client-cloudformation": "^3.421.0",
     "@aws-sdk/client-codepipeline": "^3.421.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.421.0",
     "@aws-sdk/client-dynamodb": "^3.421.0",
